# stable-deep-world-model

./: .gitignore  README.md  plot_boundaries.py  pyproject.toml  requirements.txt  train.sh  visualize.sh
.github/: copilot-instructions.md
configs/: bouncing_balls_3070.json
docs/: cloud_runbook.md  experiments.plan_multiworld.md  experiments.plan_pinpad.md  note.md  training_summary.md
docs/dreamerv3/: README.md
docs/notes/: VTA-DreamerV3_Structure.md  VTA_Dreamer_v3.md  note_old.md
scripts/: monitor_pinpad_sweep.sh  run_multiworld_sweep.sh  run_pinpad_sweep.sh  train.sh  train_multi_atari.sh  visualize.sh
scripts/dreamerv3/: boundary_frames_viz.py  stage_transition_eval.py  vta_boundary_eval.py  vta_boundary_viz.py
src/env/: __init__.py
src_dreamerv3/: __init__.py  configs.yaml  dreamer.py  models.py  networks.py  vta.py
src_dreamerv3/envs/: __init__.py  pinpad.py
src_vta/: bouncing_balls.py  config.py  generate_npz.py  maze_env.py  model.py  model2.py  train.py  train_maze.py  utils.py  visualize.py
src_vta/data/: generate_npz.py  make_dataset.py  paths.py
src_vta/envs/: config.py  factory.py  register.py
src_vta/envs/memory_maze/: __init__.py  gym_wrappers.py  oracle.py  tasks.py
src_vta/envs/wrappers/: preprocessing.py  recoder.py
src_vta/models/: __init__.py  action.py  agent.py  components.py  dense.py  policy.py  rssm.py  vta.py
src_vta/scripts/: train.py  train_balls.py  train_maze.py  train_rl.py  visualize.py
src_vta/scripts/train_envs/: __init__.py  balls.py  base.py  maze.py
