[project]
name = "stable-deep-world-model"
version = "0.1.0"
description = "VTA-based world model experiments (Bouncing Balls / 3D Maze)"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "torch",
    "tensorboard",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly list package directories since our project name differs from the python packages
packages = [
    "src_vta",
    "src",
]
